# C_SimpleProject

./: CMakeLists.txt  READEME.md  README.md
include/: test.h
src/: CMakeLists.txt  main.c  test.c
